fixed mobile spacing error for status, events, users and their values.

--- a/features/issues/components/issue-list/issue-row.module.scss
+++ b/features/issues/components/issue-list/issue-row.module.scss
@@ -89,5 +89,12 @@
     flex-direction: row;
     color: color.$gray-500;
     font: font.$text-sm-medium;
+    padding: 16px 24px;
+    justify-content: space-between;
+    margin-left: -24px;
+  }
+
+  .warningLevel {
+    margin-left: -8px;
   }
 }
